<resources>

    <string name="app_name">Drag Partner</string>

    <!-- Strings related to Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <!-- Strings related to Main -->
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="connections">Connections</string>
    <string name="cars">Cars</string>
    <string name="logout">Logout</string>
    <string name="call_support">Call Support</string>
    <string name="rides">Rides</string>

    <!-- Strings related to Rides -->
    <string name="ride_id_">Ride ID:</string>

    <!-- Strings related to Trips -->
    <string name="trip_id_">Trip ID:</string>
    <string name="no_trips_available">No Trips Available!</string>

    <!-- Strings related to Requests -->
    <string name="request_id_">Request ID:</string>
    <string name="no_requests_available">No Requests Available!</string>

    <!-- Strings related to Trip details -->
    <string name="trip_details">Trip details</string>
    <string name="update">Update</string>
    <string name="rider_info">Rider Info</string>
    <string name="driver_info">Driver Info</string>
    <string name="car_info">Car Info</string>
    <string name="location_info">Location Info</string>
    <string name="fare_info">Fare Info</string>
    <string name="seats">Seats</string>
    <string name="total_amount">Total amount</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_number">Driver Number</string>
    <string name="car_name">Car Name</string>
    <string name="car_number">Car Number</string>
    <string name="payment_info">Payment Info</string>
    <string name="amount_to_be_collected">Amount to be collected</string>

    <!-- Strings related to Connections -->
    <string name="users">USERS</string>
    <string name="partners">PARTNERS</string>
    <string name="places">PLACES</string>
    <string name="add_partner">Add Partner</string>
    <string name="add_place">Add Place</string>

    <!-- Strings related to Add Partner -->
    <string name="new_partner">New Partner</string>
    <string name="save">Save</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Strings related to Profile -->
    <string name="mobile_number">Mobile Number</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="address">Address</string>

    <!-- Strings related to Add Car -->
    <string name="new_car">New Car</string>
    <string name="new_cars">New Cars</string>
    <string name="city">City</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="trip_fare">Trip fare</string>

    <!-- Strings related to Add Ride -->
    <string name="new_ride">New Ride</string>
    <string name="new_rides">New Rides</string>
    <string name="ride_fare">Ride fare</string>

</resources>