<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_trip_driver_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_trip_driver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_trip_driver_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_trip_driver_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_number"
            android:inputType="phone"
            android:maxLength="14" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_trip_car_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_trip_car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_trip_car_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_trip_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_number"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>